@@ -18,10 +18,11 @@ Test::PodSpelling.stopwords[ 2] = Rect
 Inline = 0.67
 Inline::C = 0.62
 
-; for Data::Printer
-; Data::Printer::Filter = 0
-; Term::ANSIColor = 0
-; Package::Stash = 0
+[ Prereqs / Suggests ]
+; for ::DataPrinterRole
+Data::Printer = 1.0.0
+Term::ANSIColor = 0
+Package::Stash = 0
 
 [Prereqs / TestRequires]
 Test::Exception = 0.43
