@@ -1,3 +1,12 @@
+«»
+
+  Bug fixes
+
+   - Updates implementation of Data::Printer filter to using new API from
+     Data::Printer. Bumps version of Data::Printer to at least v1.0.0.
+
+     Fixes <https://rt.cpan.org/Public/Bug/Display.html?id=133545>. SREZIC++.
+
 0.001 2020-10-17 00:55:16-0500
 
   Features
